# Plemeshko

./: Cargo.toml  README.md  rustfmt.toml  save.json
plemeshko/: Cargo.toml
plemeshko/src/: cor.rs  log.rs  main.rs  memento.rs  params.rs
plemeshko/src/app/: env.rs  error.rs  mod.rs  util.rs
plemeshko/src/app/events/: flag.rs  mod.rs  set.rs
plemeshko/src/app/screens/: load.rs  menu.rs  mod.rs  new_game.rs
plemeshko/src/app/screens/main/: debug_tab.rs  info_tab.rs  mod.rs  research_tab.rs
plemeshko/src/app/widgets/: containers.rs  mod.rs  widget.rs
plemeshko/src/app/widgets/containers/: menu.rs  screens.rs  tabs.rs  window.rs
plemeshko/src/client/: error.rs  graphics.rs  gui.rs  mod.rs  window.rs
plemeshko/src/client/app/: mod.rs
plemeshko/src/env/: mod.rs  text.rs
plemeshko/src/env/config/: id.rs  indexer.rs  mod.rs  repository.rs  repository_builder.rs  serializable.rs
plemeshko/src/framework/: graphics.rs  gui.rs  mod.rs  window.rs
plemeshko/src/gui/: gfx.rs  gui.rs  mod.rs  win.rs
plemeshko/src/server/: erection.rs  error.rs  mod.rs  units.rs
plemeshko/src/server/config/: method.rs  method_group.rs  mod.rs  setting_group.rs  transport.rs  transport_group.rs
plemeshko/src/sim/: depot.rs  erection.rs  error.rs  mod.rs  production.rs  transport_group.rs  units.rs
plemeshko/src/sim/config/: method.rs  method_group.rs  mod.rs  production_method.rs  production_method_group.rs  resource.rs  setting.rs  setting_group.rs  technology.rs  transport.rs  transport_group.rs  transport_method.rs
plemeshko/src/sim/units/: mod.rs  ticks.rs
plemeshko/src/state/: has.rs  indexer.rs  label_factory.rs  mod.rs  raw_indexer.rs  research.rs  save.rs  serializable.rs
plemeshko/src/state/components/: app.rs  id.rs  indexer.rs  loader.rs  mod.rs  shared.rs
plemeshko/src/state/config/: id.rs  indexer.rs  info.rs  mod.rs  prepare.rs  repository.rs  repository_builder.rs  type_registry.rs
plemeshko/src/state/text/: id.rs  mod.rs
plemeshko/src/state/texture/: id.rs  mod.rs  repository.rs
plemeshko/src/tui/: mod.rs
plemeshko/src/units/: mod.rs
plemeshko/src/util/: cor.rs  mod.rs  rect.rs
(+83 files in other folders)
