[package]
name = "plemeshko"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
winit = "0.27"
wgpu = "0.14"
egui = "0.20"
egui_extras = { version = "0.20", features = ["image"] }
egui-wgpu = "0.20"
egui-winit = "0.20"
fluent = "0.15"
fluent-syntax = "0.11"
unic-langid = { version = "0.9", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp"] }
rodio = "0.17"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
colored = "2.0"
time = { version = "0.3", features = ["formatting"] }
derive_more = "0.99"
educe = "0.4.20"
anyhow = "1.0"
either = "1.8"
futures = "0.3"
static_assertions = "1.1"
enum-map = "2.4"
delegate = "0.9"
tap = "1.0"
bytemuck = "1.13"
rand = "0.8.5"
